--- a/index.html
+++ b/index.html
@@ -1,175 +1,44 @@
-### Data
-import datetime
-import pandas as pd
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta charset="UTF-8"><script type="text/javascript">(window.NREUM||(NREUM={})).loader_config={licenseKey:"NRJS-00fc9c54926a241041a",applicationID:"715087904"};window.NREUM||(NREUM={}),__nr_require=function(e,n,t){function r(t){if(!n[t]){var i=n[t]={exports:{}};e[t][0].call(i.exports,function(n){var i=e[t][1][n];return r(i||n)},i,i.exports)}return n[t].exports}if("function"==typeof __nr_require)return __nr_require;for(var i=0;i<t.length;i++)r(t[i]);return r}({1:[function(e,n,t){function r(){}function i(e,n,t){return function(){return o(e,[u.now()].concat(f(arguments)),n?null:this,t),n?void 0:this}}var o=e("handle"),a=e(4),f=e(5),c=e("ee").get("tracer"),u=e("loader"),s=NREUM;"undefined"==typeof window.newrelic&&(newrelic=s);var p=["setPageViewName","setCustomAttribute","setErrorHandler","finished","addToTrace","inlineHit","addRelease"],l="api-",d=l+"ixn-";a(p,function(e,n){s[n]=i(l+n,!0,"api")}),s.addPageAction=i(l+"addPageAction",!0),s.setCurrentRouteName=i(l+"routeName",!0),n.exports=newrelic,s.interaction=function(){return(new r).get()};var m=r.prototype={createTracer:function(e,n){var t={},r=this,i="function"==typeof n;return o(d+"tracer",[u.now(),e,t],r),function(){if(c.emit((i?"":"no-")+"fn-start",[u.now(),r,i],t),i)try{return n.apply(this,arguments)}catch(e){throw c.emit("fn-err",[arguments,this,e],t),e}finally{c.emit("fn-end",[u.now()],t)}}}};a("actionText,setName,setAttribute,save,ignore,onEnd,getContext,end,get".split(","),function(e,n){m[n]=i(d+n)}),newrelic.noticeError=function(e,n){"string"==typeof e&&(e=new Error(e)),o("err",[e,u.now(),!1,n])}},{}],2:[function(e,n,t){function r(e,n){var t=e.getEntries();t.forEach(function(e){"first-paint"===e.name?c("timing",["fp",Math.floor(e.startTime)]):"first-contentful-paint"===e.name&&c("timing",["fcp",Math.floor(e.startTime)])})}function i(e,n){var t=e.getEntries();t.length>0&&c("lcp",[t[t.length-1]])}function o(e){if(e instanceof s&&!l){var n,t=Math.round(e.timeStamp);n=t>1e12?Date.now()-t:u.now()-t,l=!0,c("timing",["fi",t,{type:e.type,fid:n}])}}if(!("init"in NREUM&&"page_view_timing"in NREUM.init&&"enabled"in NREUM.init.page_view_timing&&NREUM.init.page_view_timing.enabled===!1)){var a,f,c=e("handle"),u=e("loader"),s=NREUM.o.EV;if("PerformanceObserver"in window&&"function"==typeof window.PerformanceObserver){a=new PerformanceObserver(r),f=new PerformanceObserver(i);try{a.observe({entryTypes:["paint"]}),f.observe({entryTypes:["largest-contentful-paint"]})}catch(p){}}if("addEventListener"in document){var l=!1,d=["click","keydown","mousedown","pointerdown","touchstart"];d.forEach(function(e){document.addEventListener(e,o,!1)})}}},{}],3:[function(e,n,t){function r(e,n){if(!i)return!1;if(e!==i)return!1;if(!n)return!0;if(!o)return!1;for(var t=o.split("."),r=n.split("."),a=0;a<r.length;a++)if(r[a]!==t[a])return!1;return!0}var i=null,o=null,a=/Version\/(\S+)\s+Safari/;if(navigator.userAgent){var f=navigator.userAgent,c=f.match(a);c&&f.indexOf("Chrome")===-1&&f.indexOf("Chromium")===-1&&(i="Safari",o=c[1])}n.exports={agent:i,version:o,match:r}},{}],4:[function(e,n,t){function r(e,n){var t=[],r="",o=0;for(r in e)i.call(e,r)&&(t[o]=n(r,e[r]),o+=1);return t}var i=Object.prototype.hasOwnProperty;n.exports=r},{}],5:[function(e,n,t){function r(e,n,t){n||(n=0),"undefined"==typeof t&&(t=e?e.length:0);for(var r=-1,i=t-n||0,o=Array(i<0?0:i);++r<i;)o[r]=e[n+r];return o}n.exports=r},{}],6:[function(e,n,t){n.exports={exists:"undefined"!=typeof window.performance&&window.performance.timing&&"undefined"!=typeof window.performance.timing.navigationStart}},{}],ee:[function(e,n,t){function r(){}function i(e){function n(e){return e&&e instanceof r?e:e?c(e,f,o):o()}function t(t,r,i,o){if(!l.aborted||o){e&&e(t,r,i);for(var a=n(i),f=v(t),c=f.length,u=0;u<c;u++)f[u].apply(a,r);var p=s[y[t]];return p&&p.push([b,t,r,a]),a}}function d(e,n){h[e]=v(e).concat(n)}function m(e,n){var t=h[e];if(t)for(var r=0;r<t.length;r++)t[r]===n&&t.splice(r,1)}function v(e){return h[e]||[]}function g(e){return p[e]=p[e]||i(t)}function w(e,n){u(e,function(e,t){n=n||"feature",y[t]=n,n in s||(s[n]=[])})}var h={},y={},b={on:d,addEventListener:d,removeEventListener:m,emit:t,get:g,listeners:v,context:n,buffer:w,abort:a,aborted:!1};return b}function o(){return new r}function a(){(s.api||s.feature)&&(l.aborted=!0,s=l.backlog={})}var f="nr@context",c=e("gos"),u=e(4),s={},p={},l=n.exports=i();l.backlog=s},{}],gos:[function(e,n,t){function r(e,n,t){if(i.call(e,n))return e[n];var r=t();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(e,n,{value:r,writable:!0,enumerable:!1}),r}catch(o){}return e[n]=r,r}var i=Object.prototype.hasOwnProperty;n.exports=r},{}],handle:[function(e,n,t){function r(e,n,t,r){i.buffer([e],r),i.emit(e,n,t)}var i=e("ee").get("handle");n.exports=r,r.ee=i},{}],id:[function(e,n,t){function r(e){var n=typeof e;return!e||"object"!==n&&"function"!==n?-1:e===window?0:a(e,o,function(){return i++})}var i=1,o="nr@id",a=e("gos");n.exports=r},{}],loader:[function(e,n,t){function r(){if(!x++){var e=E.info=NREUM.info,n=d.getElementsByTagName("script")[0];if(setTimeout(s.abort,3e4),!(e&&e.licenseKey&&e.applicationID&&n))return s.abort();u(y,function(n,t){e[n]||(e[n]=t)}),c("mark",["onload",a()+E.offset],null,"api");var t=d.createElement("script");t.src="https://"+e.agent,n.parentNode.insertBefore(t,n)}}function i(){"complete"===d.readyState&&o()}function o(){c("mark",["domContent",a()+E.offset],null,"api")}function a(){return O.exists&&performance.now?Math.round(performance.now()):(f=Math.max((new Date).getTime(),f))-E.offset}var f=(new Date).getTime(),c=e("handle"),u=e(4),s=e("ee"),p=e(3),l=window,d=l.document,m="addEventListener",v="attachEvent",g=l.XMLHttpRequest,w=g&&g.prototype;NREUM.o={ST:setTimeout,SI:l.setImmediate,CT:clearTimeout,XHR:g,REQ:l.Request,EV:l.Event,PR:l.Promise,MO:l.MutationObserver};var h=""+location,y={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",agent:"js-agent.newrelic.com/nr-1167.min.js"},b=g&&w&&w[m]&&!/CriOS/.test(navigator.userAgent),E=n.exports={offset:f,now:a,origin:h,features:{},xhrWrappable:b,userAgent:p};e(1),e(2),d[m]?(d[m]("DOMContentLoaded",o,!1),l[m]("load",r,!1)):(d[v]("onreadystatechange",i),l[v]("onload",r)),c("mark",["firstbyte",f],null,"api");var x=0,O=e(6)},{}],"wrap-function":[function(e,n,t){function r(e){return!(e&&e instanceof Function&&e.apply&&!e[a])}var i=e("ee"),o=e(5),a="nr@original",f=Object.prototype.hasOwnProperty,c=!1;n.exports=function(e,n){function t(e,n,t,i){function nrWrapper(){var r,a,f,c;try{a=this,r=o(arguments),f="function"==typeof t?t(r,a):t||{}}catch(u){l([u,"",[r,a,i],f])}s(n+"start",[r,a,i],f);try{return c=e.apply(a,r)}catch(p){throw s(n+"err",[r,a,p],f),p}finally{s(n+"end",[r,a,c],f)}}return r(e)?e:(n||(n=""),nrWrapper[a]=e,p(e,nrWrapper),nrWrapper)}function u(e,n,i,o){i||(i="");var a,f,c,u="-"===i.charAt(0);for(c=0;c<n.length;c++)f=n[c],a=e[f],r(a)||(e[f]=t(a,u?f+i:i,o,f))}function s(t,r,i){if(!c||n){var o=c;c=!0;try{e.emit(t,r,i,n)}catch(a){l([a,t,r,i])}c=o}}function p(e,n){if(Object.defineProperty&&Object.keys)try{var t=Object.keys(e);return t.forEach(function(t){Object.defineProperty(n,t,{get:function(){return e[t]},set:function(n){return e[t]=n,n}})}),n}catch(r){l([r])}for(var i in e)f.call(e,i)&&(n[i]=e[i]);return n}function l(n){try{e.emit("internal-error",n)}catch(t){}}return e||(e=i),t.inPlace=u,t.flag=a,t}},{}]},{},["loader"]);</script><script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"bam.nr-data.net","errorBeacon":"bam.nr-data.net","licenseKey":"NRJS-00fc9c54926a241041a","applicationID":"715087904","transactionName":"MgYAZUsFWksFBkALXAtMJERXB0BRCwsbBlIWC0xVWBdcAiAERwodDA0GVEE=","queueTime":3,"applicationTime":3,"agent":""}</script>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>COVIDAnalytics</title>
+        <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico?m=1590012571.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.4.1/united/bootstrap.min.css">
+<link rel="stylesheet" href="/assets/css/background.css?m=1590012571.0">
+<link rel="stylesheet" href="/assets/css/buttons.css?m=1590012571.0">
+<link rel="stylesheet" href="/assets/css/cards.css?m=1590012571.0">
+<link rel="stylesheet" href="/assets/css/dropdowns.css?m=1590012571.0">
+<link rel="stylesheet" href="/assets/css/header.css?m=1590012571.0">
+<link rel="stylesheet" href="/assets/css/images.css?m=1590012571.0">
+<link rel="stylesheet" href="/assets/css/my-bootstrap.css?m=1590012571.0">
+<link rel="stylesheet" href="/assets/css/tables.css?m=1590012571.0">
+<link rel="stylesheet" href="/assets/css/team_profile.css?m=1590012571.0">
+    </head>
+    <body>
+        
+<div id="react-entry-point">
+    <div class="_dash-loading">
+        Loading...
+    </div>
+</div>
 
-### Graphing
-import plotly.graph_objects as go
-import dash
-import dash_table
-import dash_bootstrap_components as dbc
-import dash_core_components as dcc
-import dash_html_components as html
-
-from navbar import Navbar
-from footer import Footer
-
-from projections.visuals_funcs import build_continent_map
-from projections.utils import world_map_text
-from assets.mappings import states
-
-nav = Navbar()
-footer = Footer()
-
-def build_tom_us_map():
-    tomorrow = datetime.date.today() + datetime.timedelta(days=1)
-    return build_continent_map(tomorrow)
-
-
-def build_card(imgTop,titles,text,img,links):
-    cardbody = []
-    for i,t in enumerate(titles):
-        cardbody.append(html.A(t,href=links[i],className="card-title"))
-        cardbody.append(dcc.Markdown(text[i]))
-
-
-    if imgTop:
-        card_content = \
-                [
-                    dbc.CardImg(src=img, top=False),
-                    dbc.CardBody(
-                        cardbody,
-                        className="home-card-body"
-                    ),
-                ]
-
-    else:
-        card_content = \
-                [
-                    dbc.CardBody(
-                        cardbody,
-                        className="home-card-body"
-                    ),
-                    dbc.CardImg(src=img, top=True),
-                ]
-
-    card = dbc.Card(
-                card_content,
-                className="home-card h-100"
-            )
-
-    return dbc.Col(
-                    [card],
-                    style={"margin": "0.5rem"},
-                )
-
-
-data_text = '''
-       130+ international Covid-19 clinical studies,
-       aggregated into a single dataset.
-       '''
-insights_text = '''
-    Key characteristics of COVID-19 patients in an
-    interactive summary. '''
-
-projections_text = '''
-    Epidemiological predictions of COVID-19 \
-    infections, hospital stays, and mortalities.
-    '''
-
-policy_text = '''
-    Predicting infections and deaths based on various policy \
-    implementations'''
-
-
-ventilator_text = '''
-       Leveraging delays between state peaks to \
-       optimally re-use ventilators.
-       '''
-
-mortality_calculator_text = '''
-      Personalized calculator predicting mortality upon hospitalization.
-      '''
-
-infection_calculator_text = '''
-    Personalized calculator predicting results of COVID test.
-    '''
-
-cards = \
-    [
-        {
-            "titles": ["Data","Insights"],
-            "text": [data_text,insights_text],
-            "image": "assets/images/insights-4.png",
-            "links": ["/dataset","/interactive-graph"]
-        },
-        {
-            "titles": ["Infection risk calculator","Mortality risk calculator"],
-            "text": [infection_calculator_text,mortality_calculator_text],
-            "image": "assets/images/infection_logo.jpg",
-            "links": ["/infection_calculator","/mortality_calculator"]
-        },
-        {
-            "titles": ["Case predictions","Policy evaluations"],
-            "text": [projections_text,policy_text],
-            "image": "assets/images/forecast-1.png",
-            "links": ["/projections","/policies"]
-        },
-        {
-            "titles": ["Ventilator allocation"],
-            "text": [ventilator_text],
-            "image": "assets/images/allocation.png",
-            "links": ["/ventilator_allocation"]
-        }
-
-    ]
-
-
-body = dbc.Container(
-    [
-        dbc.Row(
-            dbc.Col(
-                dcc.Markdown(
-                     '''
-                     We are a group of researchers from the [MIT](http://mit.edu/) [Operations Research Center](https://orc.mit.edu/), \
-                     led by Professor [Dimitris Bertsimas](https://www.mit.edu/~dbertsim/). \
-                     We aim to quickly develop and deliver tools for hospitals and policymakers in the US to combat the spread of COVID-19. \
-                     This work represents a collaborative effort with [multiple hospitals](/collaborators) which have been providing us with \
-                     data and support throughout the model creation process.
-                     '''
-                ),
-            ),
-        ),
-        dbc.Row(
-            [
-                build_card(False,cards[0]["titles"],cards[0]["text"],cards[0]["image"],cards[0]["links"]),
-                build_card(True,cards[1]["titles"],cards[1]["text"],cards[1]["image"],cards[1]["links"]),
-                build_card(False,cards[2]["titles"],cards[2]["text"],cards[2]["image"],cards[2]["links"]),
-                build_card(True,cards[3]["titles"],cards[3]["text"],cards[3]["image"],cards[3]["links"]),
-
-            ],
-            justify="around",
-            no_gutters=True,
-        ),
-        dbc.Row(
-        [
-            dbc.Col(
-            [
-              html.Div(
-                  id = 'us_map_homepage',
-                  children = build_tom_us_map(),
-              ),
-              html.P(
-                      children = world_map_text,
-                      style={'color':'gray'},
-              ),
-            ]
-            )
-        ],
-        )
-    ],
-    className="page-body"
-)
-
-def Homepage():
-    layout = html.Div([nav, body, footer], className="site")
-    return layout
+        <footer>
+            <script id="_dash-config" type="application/json">{"url_base_pathname": null, "requests_pathname_prefix": "/", "ui": false, "props_check": false, "show_undo_redo": false, "suppress_callback_exceptions": true}</script>
+            <script src="/_dash-component-suites/dash_renderer/polyfill@7.v1_3_0m1590012602.8.7.min.js"></script>
+<script src="/_dash-component-suites/dash_renderer/react@16.v1_3_0m1590012602.13.0.min.js"></script>
+<script src="/_dash-component-suites/dash_renderer/react-dom@16.v1_3_0m1590012602.13.0.min.js"></script>
+<script src="/_dash-component-suites/dash_renderer/prop-types@15.v1_3_0m1590012602.7.2.min.js"></script>
+<script src="/_dash-component-suites/dash_html_components/dash_html_components.v1_0_3m1590012609.min.js"></script>
+<script src="/_dash-component-suites/dash_table/bundle.v4_6_2m1590012600.js"></script>
+<script src="/_dash-component-suites/dash_core_components/dash_core_components.v1_9_0m1590012600.min.js"></script>
+<script src="/_dash-component-suites/dash_core_components/dash_core_components-shared.v1_9_0m1590012600.js"></script>
+<script src="/_dash-component-suites/dash_bootstrap_components/_components/dash_bootstrap_components.v0_9_2m1590012609.min.js"></script>
+<script src="/assets/gtag.js?m=1590012571.0"></script>
+<script src="/_dash-component-suites/dash_renderer/dash_renderer.v1_3_0m1590012602.min.js"></script>
+            <script id="_dash-renderer" type="application/javascript">var renderer = new DashRenderer();</script>
+        </footer>
+    </body>
+</html>
